[gd_scene load_steps=8 format=3 uid="uid://bc00drhm2b55e"]

[ext_resource type="Script" path="res://Scripts/UI/previously.gd" id="1_iujvq"]
[ext_resource type="Texture2D" uid="uid://beeumdtuma18j" path="res://Assets/BackGround/Pre.jpg" id="2_jcmno"]
[ext_resource type="Texture2D" uid="uid://ch1qhihp2qult" path="res://Assets/BackGround/Dia.png" id="3_l1h6w"]
[ext_resource type="FontFile" uid="uid://yk7rqv1lm3um" path="res://Assets/Font/汇文明朝体.otf" id="4_eu51g"]
[ext_resource type="Texture2D" uid="uid://b4qglifs34rvq" path="res://Assets/Sprites/封面标签.png" id="5_b273y"]
[ext_resource type="AudioStream" uid="uid://bjkn52isto442" path="res://Assets/Music/前情提要.m4a.mp3" id="6_p7cvy"]
[ext_resource type="AudioStream" uid="uid://dnf5larc5mcm0" path="res://Assets/Music/点击音效.mp3" id="7_e6ypw"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_iujvq")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="Sprite2D_Background" type="Sprite2D" parent="."]
texture = ExtResource("2_jcmno")

[node name="Sprite2D_Dialogue" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("3_l1h6w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label_Pre" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1355.0
offset_top = -164.0
offset_right = 161.0
offset_bottom = -83.0
grow_horizontal = 0
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_eu51g")
theme_override_font_sizes/font_size = 24
clip_text = true

[node name="TextureButton_con" type="TextureButton" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -349.0
offset_top = -126.0
offset_right = 204.0
offset_bottom = 62.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_b273y")

[node name="Label" type="Label" parent="CanvasLayer/TextureButton_con"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_eu51g")
theme_override_font_sizes/font_size = 80
text = "继续"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_p7cvy")
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_e6ypw")

[connection signal="pressed" from="CanvasLayer/TextureButton_con" to="." method="_on_texture_button_con_pressed"]
